# paperless-stamp

./: AGENTS.md  pyproject.toml  stamp-prd.md
.beads/: issues.jsonl
.beads/export-state/: ab9b4082c2cbe0bc.json
scripts/: test_api.py  test_stamp.py
src/paperless_stamp/: __main__.py  client.py  exceptions.py  merger.py  stamp.py  worker.py
tests/: conftest.py  test_merger.py  test_stamp.py  test_worker.py
