[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperless-stamp"
version = "0.1.0"
description = "Sidecar extension for Paperless-ngx that stamps PDFs with visual marks"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "reportlab>=4.0",
    "pikepdf>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_stamp"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
